# finalProject-cmpr121

./: CMakeLists.txt  README.md
docs/: motivation.txt  spec.txt
src/: CandidateList.cpp  CandidateList.h  CandidateType.cpp  CandidateType.h  InputHandler.h  Main.cpp  Node.h  PersonType.cpp  PersonType.h  Tests.cpp
tools/: buildFull
